WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48274
compile TestNetscapePlugIn on chromium linux
https://bugs.webkit.org/show_bug.cgi?id=48274
Summary
compile TestNetscapePlugIn on chromium linux
Tony Chang
Reported
2010-10-25 16:19:05 PDT
compile TestNetscapePlugIn on chromium linux
Attachments
Patch
(11.62 KB, patch)
2010-10-25 16:22 PDT
,
Tony Chang
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2010-10-25 16:22:16 PDT
Created
attachment 71810
[details]
Patch
Tony Chang
Comment 2
2010-10-25 16:31:56 PDT
This compiles the plugin on Linux, but doesn't put it in a place that DRT will load it. There are some crashes with this plugin that I want to fix before switching to this plugin.
Kent Tamura
Comment 3
2010-10-25 19:35:04 PDT
Comment on
attachment 71810
[details]
Patch Chromium part looks ok.
Tony Chang
Comment 4
2010-10-26 18:14:59 PDT
andersca: Can you review the changes to TestNetscapePlugIn/main.cpp or direct me at someone who would be an appropriate reviewer?
Anders Carlsson
Comment 5
2010-10-27 09:52:35 PDT
Comment on
attachment 71810
[details]
Patch This is great! Hopefully it can be a first step towards eliminating the extra unix-specific TestNetscapePlugin implementation! r=me
Tony Chang
Comment 6
2010-10-27 11:42:41 PDT
Committed
r70679
: <
http://trac.webkit.org/changeset/70679
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug