2010-10-25  Tony Chang  <tony@chromium.org>

Reviewed by Anders Carlsson.

        compile TestNetscapePlugIn on chromium linux
        https://bugs.webkit.org/show_bug.cgi?id=48274

        * WebKit.gyp: Enable compilation of TestNetscapePlugIn on Linux.
2010-10-25  Tony Chang  <tony@chromium.org>

        Reviewed by Anders Carlsson.

        compile TestNetscapePlugIn on chromium linux
        https://bugs.webkit.org/show_bug.cgi?id=48274

        * DumpRenderTree/TestNetscapePlugIn/main.cpp:
        (NP_Initialize): On Linux, plugin funcs are set in initialize.
        (NPP_New): Mark the plugin as windowless.
        (NPP_GetValue): Handle mime type values.
        (NP_GetMIMEDescription):
        (NP_GetValue):
        * DumpRenderTree/chromium/TestNetscapePlugIn/ForwardingHeaders/WebKit/npapi.h: define TRUE and FALSE, which are in webkit's npapi.h.
        * DumpRenderTree/chromium/TestNetscapePlugIn/ForwardingHeaders/WebKit/npfunctions.h: Pull in npapi.h to get TRUE/FALSE (matches webkit's npfunctions.h)

Canonical link: https://commits.webkit.org/61200@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70679 268f45cc-cd09-0410-ab3c-d52691b4dbfc