WebKit/chromium/WebKit.gyp
@@ -881,6 +881,9 @@
                     'sources/': [
                         ['exclude', 'Win\\.cpp$'],
                     ],
+                    'dependencies': [
+                        'TestNetscapePlugIn',
+                    ],
                     'actions': [
                         {
                             'action_name': 'repack_locale',
@@ -908,7 +911,6 @@
                     'dependencies': [
                         'copy_mesa',
                         'LayoutTestHelper',
-                        'TestNetscapePlugIn',
                     ],
                     'mac_bundle_resources': [
                         '<(ahem_path)',
@@ -978,6 +980,54 @@
                 'type': 'executable',
                 'sources': ['../../WebKitTools/DumpRenderTree/chromium/LayoutTestHelperWin.cpp'],
             }],
+        }, {  # OS!="win"
+            'targets': [
+                {
+                    'target_name': 'TestNetscapePlugIn',
+                    'type': 'loadable_module',
+                    'sources': [ '<@(test_plugin_files)' ],
+                    'dependencies': [
+                        '<(chromium_src_dir)/third_party/npapi/npapi.gyp:npapi',
+                    ],
+                    'include_dirs': [
+                        '<(chromium_src_dir)',
+                        '../../WebKitTools/DumpRenderTree/TestNetscapePlugIn',
+                        '../../WebKitTools/DumpRenderTree/chromium/TestNetscapePlugIn/ForwardingHeaders',
+                    ],
+
+                    'conditions': [
+                        ['OS=="mac"', {
+                            'mac_bundle': 1,
+                            # It would be nice to name this
+                            # TestNetscapePlugIn, but that name is already
+                            # used by the fork of this plugin in Chromium.
+                            'product_name': 'WebKitTestNetscapePlugIn',
+                            'product_extension': 'plugin',
+                            'link_settings': {
+                                'libraries': [
+                                    '$(SDKROOT)/System/Library/Frameworks/Carbon.framework',
+                                    '$(SDKROOT)/System/Library/Frameworks/Cocoa.framework',
+                                    '$(SDKROOT)/System/Library/Frameworks/QuartzCore.framework',
+                                ]
+                            },
+                            'xcode_settings': {
+                                'GCC_SYMBOLS_PRIVATE_EXTERN': 'NO',
+                                # This is a temporary fork of
+                                # DRT/TestNetscapePlugIn/mac/Info.plist.  Once
+                                # we get rid of our forked plugin in the
+                                # chromium repo, we can share the same
+                                # Info.plist.
+                                'INFOPLIST_FILE': '../../WebKitTools/DumpRenderTree/chromium/TestNetscapePlugIn/Info.plist',
+                            },
+                        }],
+                        ['OS=="linux" or OS=="freebsd" or OS=="openbsd" or OS=="solaris"', {
+                            'cflags': [
+                                '-fvisibility=default',
+                            ],
+                        }],
+                    ],
+                },
+            ],
         }],
         ['OS=="mac"', {
             'targets': [
@@ -1000,42 +1050,6 @@
                         'files': ['<(PRODUCT_DIR)/osmesa.so'],
                     }],
                 },
-                {
-                    'target_name': 'TestNetscapePlugIn',
-                    'type': 'loadable_module',
-                    'sources': [ '<@(test_plugin_files)' ],
-                    'dependencies': [
-                        '<(chromium_src_dir)/third_party/npapi/npapi.gyp:npapi',
-                    ],
-                    'include_dirs': [
-                        '<(chromium_src_dir)',
-                        '../../WebKitTools/DumpRenderTree/TestNetscapePlugIn',
-                        '../../WebKitTools/DumpRenderTree/chromium/TestNetscapePlugIn/ForwardingHeaders',
-                    ],
-
-                    # Mac specific stuff.
-                    'mac_bundle': 1,
-                    # It would be nice to name this TestNetscapePlugIn, but
-                    # that name is already used by the fork of this plugin in
-                    # Chromium.
-                    'product_name': 'WebKitTestNetscapePlugIn',
-                    'product_extension': 'plugin',
-                    'link_settings': {
-                        'libraries': [
-                            '$(SDKROOT)/System/Library/Frameworks/Carbon.framework',
-                            '$(SDKROOT)/System/Library/Frameworks/Cocoa.framework',
-                            '$(SDKROOT)/System/Library/Frameworks/QuartzCore.framework',
-                        ]
-                    },
-                    'xcode_settings': {
-                        'GCC_SYMBOLS_PRIVATE_EXTERN': 'NO',
-                        # This is a temporary fork of
-                        # DRT/TestNetscapePlugIn/mac/Info.plist.  Once we get
-                        # rid of our forked plugin in the chromium repo, we
-                        # can share the same Info.plist.
-                        'INFOPLIST_FILE': '../../WebKitTools/DumpRenderTree/chromium/TestNetscapePlugIn/Info.plist',
-                    },
-                }
             ],
         }],
     ], # conditions
